--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "echo \"Nessuna build richiesta\""
   },
   "dependencies": {
-    "chrome-aws-lambda": "^10.1.0",
-    "puppeteer-core": "^10.1.0",
+    "puppeteer": "^19.11.1",
     "node-fetch": "^2.6.7"
   },
   "engines": {
