--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "echo \"Nessuna build richiesta\""
   },
   "dependencies": {
-    "puppeteer": "^19.11.1",
+    "chrome-aws-lambda": "^10.1.0",
+    "puppeteer-core": "^10.1.0",
     "node-fetch": "^2.6.7"
   },
   "engines": {
